# market-parser

./: .gitignore  .gitmodules  README.md  dataset.json  pyproject.toml  requirements.txt  results.csv  test-product.py  test.ipynb
market/: accessory.py  main.py  oodle.py  optimizer.py  parser.py  permutation.py
market-parser-go/: go.mod  main.go  oodle_parser.go  oodle_try_1321.go
market-parser-go/oodle/: main.go
market-parser-go/packet/market_search/: main.go
